
  o Client Changes:
    * repositoryMap conaryrc entries can now use wildcards for the server name
    * Multiple entitlements can be sent to each server now
    * Server names in entitlements may include wildcads.
    * Entitlements may be placed in conaryrc files now using
      'entitlement server entitlement'. conary config displays entitlement
      information.

  o Server Changes:
    * (Nearly) all repository operations are now performed using the
      permissions of the anonymous user in addition to the permission set
      for any user authentication information which is present.
    * Path names in the entitlementsDirectory no longer have any meaning. All
      entitlements are read, and the serverName in the XML for the entitlement
      is used to determine which server to send the entitlement too.
    * Entitlement classes are no longer used as part of authentication; they
      may still be specified, but repositorys now look up the class(es) for an
      entitlement based on the key.

Changes in 1.1.28:
  o Documentation Changes:
    * Incorrect references to createGroup have been fixed. (CNY-1700)

  o Build Changes:
    * Files added with in the repository and locally no longer cause
      'cvc update' to fail as long as the files have the same fileId.
      (CNY-1428)
    * r.Link allows full paths to be specified for the target of the
      link as long as the directory matches the source of the link.
      (CNY-751)
    * "cvc mv" has been added as a synonym for "cvc rename".
    * r.addCvsSnapshot() now works correctly with anonymous,
      pserver-based, servers. Previously, cvs checkout would fail due
      to strange characters being in the destination directory.
    * r.add*Snapshot() will now raise errors if the shell commands they
      are executing fail for any reason

  o Bug Fixes:
    * An index has been added to improve the performance of various
      file stream related queries in a Conary repository. (CNY-1704)