@@ -22,6 +22,10 @@ Changes in @NEW@:
       'entitlement server entitlement'. conary config displays entitlement
       information.
 
+  o Build Changes:
+    * Refreshed autosource files are now displayed by 'cvc revert' and 
+      'cvc diff'
+
   o Server Changes:
     * (Nearly) all repository operations are now performed using the
       permissions of the anonymous user in addition to the permission set
